make sure the door open/close status icon will be left aligned and not stretched throughout.

--- a/buildroot-external/patches/occu/0039-WebUI-Fix-Style-Glitches/occu/WebUI/www/webui/style.css
+++ b/buildroot-external/patches/occu/0039-WebUI-Fix-Style-Glitches/occu/WebUI/www/webui/style.css
@@ -5231,7 +5231,6 @@ application {
 
 .CLASS02520 {
 	color: $_(textColorB); /* black */
-	width:100%;
 	border:none;
 	background-color:$_(activeBackground);
 }
